fix: copy tsconfig.json in Dockerfile

--- a/packages/validator/Dockerfile
+++ b/packages/validator/Dockerfile
@@ -4,7 +4,7 @@ RUN npm install -g pnpm
 
 WORKDIR /app
 
-COPY package.json pnpm-workspace.yaml pnpm-lock.yaml ./
+COPY package.json pnpm-workspace.yaml pnpm-lock.yaml tsconfig.json ./
 COPY packages/shared ./packages/shared
 COPY packages/validator ./packages/validator
 
